solved problems on mobile

--- a/src/pages/mainPage.css
+++ b/src/pages/mainPage.css
@@ -24,4 +24,5 @@
   color:grey;
   margin-block: 13.9rem;
   font-size: 2rem;
+  text-align: center;
 }
